커뮤니티 페이지 디자인 수정

--- a/board/templates/board_detail.html
+++ b/board/templates/board_detail.html
@@ -35,11 +35,11 @@
                     <label for = "contents">내용</label>
                     <textarea class ="form-control" readonly>{{ board.contents }}</textarea><br>
                 </div>
-                <button type = "button"  class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/board/list/'">이전으로</button>
+                <button type = "button"  class="btn" style="background-color:  #D9D1C7; color: black;" onclick = "location.href = '/board/list/'">이전으로</button>
             </div>
             <div id="form-commentInfo" style="margin-top: 50px;">
                 <div id="comment-count">댓글수: <span id="count">0</span></div>
-                <input id="comment-input" placeholder="댓글을 입력해 주세요.">
+                <input id="comment-input" placeholder="댓글을 입력해 주세요." style="width: 300px;">
                 <button id="submit" class="btn" style="background-color:#D9D1C7">등록</button>
             </div>
             <div id="comments">
