--- a/board/templates/board_write.html
+++ b/board/templates/board_write.html
@@ -39,8 +39,8 @@
                     {% endif %}
                     {% endfor %}
                     <br>
-                    <button type="submit" class="btn text-white" style="background-color: #734A32;">글쓰기</button>
-                    <button type="button" class="btn text-white" style="background-color: #734A32;" onclick="location.href='/board/list/{{ board.id }}'">돌아가기</button>
+                    <button type="submit" class="btn" style="background-color: #D9D1C7; color: black;">글쓰기</button>
+                    <button type="button" class="btn" style="background-color: #D9D1C7; color: black;" onclick="location.href='/board/list/{{ board.id }}'">돌아가기</button>
                 </form>
             </div>
         </div>
