--- a/accounts/templates/main.html
+++ b/accounts/templates/main.html
@@ -37,25 +37,19 @@
     </section>
     
     <div class="sec">
-        <div class="ment" style="text-align: center; color: white;"><h3>이런 스터디카페는 어떠세요?</h3></div><br>
-        <div class="cardlist" style="display: flex; display: flex; justify-content: center; gap: 20px;">
-            <a href=# class="card" style="width: 18rem; text-decoration: none;" onclick="location.href='/scainfo/detail/8/'">
+        <div class="ment"><h3>이런 스터디카페는 어떠세요?</h3></div><br>
+        <div class="cardlist">
+            <a href=# class="card" onclick="location.href='/scainfo/detail/8/'">
                 <img src="https://modo-phinf.pstatic.net/20200109_217/1578534984095S5e3E_JPEG/mosaquJxjL.jpeg?type=w720" class="card-img-top" style="width: 17.9rem; height: 14rem;" alt="...">
-                <div class="card-body">
-                    <p class="card-text" style="color: black;">팝스스터디카페 강남대점</p>
-                </div>
+                <div class="card-body"><p class="card-text">팝스스터디카페 강남대점</p></div>
             </a>
-            <a href=# class="card" style="width: 18rem; text-decoration: none;" onclick="location.href='/scainfo/detail/85/'">
+            <a href=# class="card" onclick="location.href='/scainfo/detail/85/'">
                 <img src="https://search.pstatic.net/common/?autoRotate=true&type=w560_sharpen&src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20211203_91%2F1638538958919Vvsl1_JPEG%2F58193E70-4C5B-4ED2-AA91-2D865AD3F816.jpeg" class="card-img-top"  style="width: 17.9rem; height: 14rem;" alt="...">
-                <div class="card-body">
-                    <p class="card-text" style="color: black;">플래닛스터디 카페 성복점</p>
-                </div>
+                <div class="card-body"><p class="card-text">플래닛스터디 카페 성복점</p></div>
             </a>
-            <a href=# class="card" style="width: 18rem; text-decoration: none;" onclick="location.href='/scainfo/detail/18/'">
+            <a href=# class="card" onclick="location.href='/scainfo/detail/18/'">
                 <img src="https://search.pstatic.net/common/?autoRotate=true&type=w560_sharpen&src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20191022_90%2F157170927582271Xp1_JPEG%2FvnrSCmvQb4mod6_iOyQVmKbB.jpg" class="card-img-top"  style="width: 17.9rem; height: 14rem;" alt="...">
-                <div class="card-body">
-                    <p class="card-text" style="color: black;">르하임스터디카페 용인보정점</p>
-                </div>
+                <div class="card-body"><p class="card-text">르하임스터디카페 용인보정점</p></div>
             </a>
         </div>
     </div>
