마이페이지 디자인 수정

--- a/myPage/static/myPage.css
+++ b/myPage/static/myPage.css
@@ -46,6 +46,21 @@
     background-image: url('/static/home-img.png'); /* 집 모양 이미지 파일 경로 */
     background-size: cover;
   }
+
+#nav .home-btn {
+    position: relative;
+}
+
+#nav .home-btn::after {
+    content: 'MY';
+    position: absolute;
+    top: 45%;
+    left: 100%;
+    transform: translate(-50%, -50%);
+    margin-left: 40px;
+    font-size: 35px;
+    color: #324028;
+}
   
   article {
     display: block;
@@ -61,9 +76,9 @@
     border-radius: 50%;
     background-color: white;
     margin: 0 auto;
-    background-image: url('http://nickylew.com/wp-content/uploads/2017/05/nickylew-2017.jpg');
-    background-size: 230%;
-    background-position: 80% 0%;
+    background-image: url('/static/user.png');
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
   }
   article .profile-info {
@@ -91,7 +106,7 @@
   }
   
   article .posts .tile {
-    margin-bottom: 30px;
+    margin-bottom: 5px;
   }
 
   a {
@@ -124,7 +139,7 @@
   }
   
   article .posts .tile .inner:hover h4 { /* 타일에 마우스 올라가면 글씨 */
-    color: #A69958; 
+    color: #734A32; 
     transition: color 0.25s;
   }
   
