--- a/myPage/templates/myPage.html
+++ b/myPage/templates/myPage.html
@@ -11,7 +11,10 @@
 <body>
     <div class="pfl-wrapper">
         <nav id="nav">
-            <a href="/" class="home-btn"></a>
+            <div class="nav-content">
+                <a href="/" class="home-btn"></a>
+                <!-- <h2 class="my-text">MY</h2> -->
+            </div>
         </nav>
         <article>
             <div class="profile-photo"></div>
