스카목록에서 지도페이지 이동 버튼 추가, 스카상세페이지 배치 수정

--- a/cafemapapp/templates/cafemapapp/onemarker.html
+++ b/cafemapapp/templates/cafemapapp/onemarker.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>스터디카페 찾기</title>
+        <title>스터디카페 위치</title>
 
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <link rel="stylesheet" href='/static/css/studycafeMap.css'>
@@ -13,7 +13,7 @@
         <h2>스터디카페 찾기</h2>-->
         <div class="top-bar">
             <a href="/"><img class="home-btn" src="/static/home-img.png"></a>        
-            <h2>스터디카페 찾기</h2>
+            <h2>스터디카페 위치</h2>
         </div>
 
         {% comment %}
