--- a/scainfoapp/templates/scainfoapp/sort_star.html
+++ b/scainfoapp/templates/scainfoapp/sort_star.html
@@ -14,6 +14,11 @@
         <a href="/"><img class="homebtn" src="/static/images/homebtn.png"/></a></div>
         <h2 style="text-align: center;">스터디카페 목록</h2>
         
+        <div class="mapview" align="right">
+            <button class="mapbtn" onclick="location.href='/scamap/'">지도로 보기</button >
+        </div>
+        
+        <div class="midbar">
         <div class="sort" align="right">
             <select title="" onchange="window.location.href=this.value">
                 <option id="a" value="/scainfo/all/">기본 순</option>                
@@ -29,7 +34,8 @@
             <button class="btn text-white" style="background-color:#324028;" type="submit">검색</button>
         </form>
         <p></p>
-    </div>
+    </div><div style="clear:both;"></div>
+</div>
 
         <div class="container">
             {% for sca in posts %}
@@ -81,7 +87,7 @@
                     </div>
                     <p></p>
                 </div>
-                <br></br>
+                <br>
             {%endfor%}
             <p></p>
             <div style="text-align: center;">
