--- a/scainfoapp/static/css/detail.css
+++ b/scainfoapp/static/css/detail.css
@@ -23,10 +23,9 @@
   float: left;
 }
 
-/* h3{
-  margin-bottom: 0;
-  float: left;
-} */
+h3{
+  margin-bottom: 15px;
+}
 
 hr{
   margin-top: 20px;
@@ -43,7 +42,7 @@ hr{
 }
 
 .timebtn{
-  width: 20px;
+  width: 25px;
 }
 
 .mapbtn{
@@ -51,7 +50,7 @@ hr{
 }
 
 .phonebtn{
-  width: 30px;
+  width: 25px;
 }
 
 .reviewbtn{
@@ -79,7 +78,7 @@ h2 { text-align: center; }
 .like{
   /* position: relative; */
   /* margin-left: 50px; */
-  height: 80.37px;
+  height: 72.39px;
   float: right;
 }
 .lb{
@@ -110,17 +109,12 @@ h2 { text-align: center; }
     margin-top: 20px;
 
 }
-.phonebtn{
-  width: 20px;
-  /* height: 30px; */
-}
+
 select{
   text-align-last: center;
   text-align: center;
   background-color: rgb(242, 242, 242)
 }
-
-
 
 .likebtn:hover{
   box-shadow: 200px 0 0 0 rgba(0,0,0,0.25) inset, 
@@ -131,11 +125,26 @@ select{
   width: 650px;
   margin: auto;
 }
+.btns{
+  margin-top: 10px;
+  height: 70px;
+}
 
-/* .tag{
-  width: 650px;
-  margin: auto;
-} */
+.wbtn{
+  float: left;
+  margin-top: 10px;
+  margin-left: 15px;
+}
+.rbtn{
+  margin-top: 10px;
+  /* margin-left: 35px; */
+  float: left;
+}
+
+.sbtn{
+  margin-top: 10px;
+  /* text-align: center; */
+}
 
 .card{
   /* background-color: #D9D1C7; */
@@ -154,6 +163,7 @@ select{
 
 
 .star-ratings {
+  float: left;
     color: #aaa9a9; 
     position: relative;
     unicode-bidi: bidi-override;
