--- a/scainfoapp/static/css/home.css
+++ b/scainfoapp/static/css/home.css
@@ -81,6 +81,19 @@ select{
   margin: auto;
   float: left;
 }
+
+.tag-name{
+  width: 110px;
+  height: 40px;
+  background-color: #D9D1C7;
+  border-radius: 20px;  
+  margin-right: 10px;
+  margin-bottom: 0;
+  text-align : center;
+  line-height : 40px;
+  float: left;
+}
+
 .card-title{
   margin-top: 0;
   margin-bottom: 10px;
@@ -101,13 +114,14 @@ select{
 }
 
 .card-body{
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 8%;
+  margin-right: 8%;
   margin-top: 5%;
   margin-bottom: 5%;
 }
 
 .star-ratings {
+  float: left;
     color: #aaa9a9; 
     position: relative;
     unicode-bidi: bidi-override;
