--- a/scainfoapp/templates/scainfoapp/like.html
+++ b/scainfoapp/templates/scainfoapp/like.html
@@ -61,22 +61,22 @@
                             </div>
                         </div>
 
-                        <p>카카오맵 리뷰 수 :
-                            {{sca.review}} 
-                            {% comment %} <button onclick="location.href='/review/write'">리뷰 쓰기</button > {% endcomment %}
-                            </p>
+                        <p>&nbsp;&nbsp;카카오맵 리뷰({{sca.review}})</p>
                         {% comment %} <p>영업시간 :
                             {{sca.time}}</p>
                         <p>전화번호 :
                             {{sca.phone_number}}</p> {% endcomment %}
 
-                        {% for hashtag in hashtags %}
-                            {%if sca.id is hashtag.sca_id%}
-
-                                <span>#{{hashtag.name}}</span>
-
-                            {%endif%}
-                        {%endfor%}
+                            <div>
+                                {% for hashtag in hashtags %}
+                                    {%if sca.id is hashtag.sca_id%}
+    
+                                        <div class="tag-name">#{{hashtag.name}}</div>
+    
+                                    {%endif%}
+                                {%endfor%}
+                            </div>
+                            <div style="clear:both;"></div>
                         {% comment %} <p>찜 :
                             {{sca.sca_like}}</p> {% endcomment %}
                     </div>
